styled the doc the forms assignment

--- a/Week2/Forms.html
+++ b/Week2/Forms.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="Kenya farming, poultry farming, beekeeping, learning forms, HTML5 validation">
     <meta name="author" content="Scripted FARM Kenya">
     <title>Scripted FARM Kenya | Simple Livestock Learning Forms</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/Images/icon.png">
 </head>
 <body>
     <header>
@@ -109,14 +111,14 @@
                 <h3>Visual Learning</h3>
                 
                 <figure>
-                    <img src="chicken-house-kenya.jpg" 
+                    <img src="chicken-house-kenya.jpeg" 
                          alt="Simple wooden chicken house with iron sheet roof and wire mesh windows suitable for Kenyan climate" 
                          width="600" height="400">
                     <figcaption>Basic chicken house design for Kenyan conditions</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="beehive-setup.jpg" 
+                    <img src="beehive-setup.jpeg" 
                          alt="Modern beehives placed under trees with beekeeper in protective gear" 
                          width="600" height="400">
                     <figcaption>Proper beehive placement and management</figcaption>
